Fixed filter button layout on mobile and desktop

--- a/css/style-2.css
+++ b/css/style-2.css
@@ -75,13 +75,9 @@ code {
     margin-bottom: 0.3rem !important;
 }
 
-.post-header .heading {
-    margin-bottom: 1.8rem;
-}
-
 .post-header h1, .post-header h6 {
     word-wrap: break-word;
-} 
+}
 
 .post-content h2, .post-content h3, .post-content h4,
 .post-content h5, .post-content h6, .post-content code.highlighter-rouge {
@@ -244,7 +240,7 @@ pre {
         margin-right: auto;
         margin-left: auto;
     }
-    
+
     .my-fluid-container .col-lg-9 {
         padding: 0 5%;
     }
